KUBERNETES/applications/online-boutique-microservice-application/ingress/traefik/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-app
  namespace: default
spec:
  ingressClassName: traefik
  tls:
  - hosts:
    - my-services.mahinraza.online
    secretName: my-services-mahinraza-online-tls-secret
  rules:
    - host: my-services.mahinraza.online
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
