KUBERNETES/applications/online-boutique-microservice-application/ingress/traefik/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: nginx
  namespace: default
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`my-services.mahinraza.online`)
      kind: Rule
      services:
        - name: frontend
          port: 80
  tls:
    secretName: my-services-mahinraza-online-tls-secret
